; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_enode.c_consttree.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_enode.c_consttree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @consttree(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i64 @isarray(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @atop(i32 %9)
  store i32 %10, i32* %4, align 4
  br label %15

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @isint(i32 %12)
  %14 = call i32 @assert(i32 %13)
  br label %15

15:                                               ; preds = %11, %8
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %3, align 4
  %18 = zext i32 %17 to i64
  %19 = call i32 @cnsttree(i32 %16, i64 %18)
  ret i32 %19
}

declare dso_local i64 @isarray(i32) #1

declare dso_local i32 @atop(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @isint(i32) #1

declare dso_local i32 @cnsttree(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
